# languages

./: README.md
hw1/: commands.py  fib  virtual_machine.py
hw2/: CMakeLists.txt  bad_example_1.cpp  bad_example_2.cpp  good_example_1.cpp  good_example_2.cpp  main.cpp  myexceptions.h
hw5/: fib.py  linq.py  myitertools.py  word_count.py
